tests/baselines/reference/newExpressionWithCast.errors.txt
newExpressionWithCast.ts(3,12): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
newExpressionWithCast.ts(7,13): error TS2365: Operator '>' cannot be applied to types 'boolean' and 'void'.
newExpressionWithCast.ts(7,17): error TS1109: Expression expected.
newExpressionWithCast.ts(7,18): error TS2693: 'any' only refers to a type, but is being used as a value here.


==== newExpressionWithCast.ts (4 errors) ====
    function Test() { }
    // valid but error with noImplicitAny
    var test = new Test();
               ~~~~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
    
    function Test2() { }
    // parse error
    var test2 = new <any>Test2();
                ~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'boolean' and 'void'.
                    ~
!!! error TS1109: Expression expected.
                     ~~~
!!! error TS2693: 'any' only refers to a type, but is being used as a value here.
    
    function Test3() { }
    // valid with noImplicitAny
    var test3 = new (<any>Test3)();
    
    